# deep_search_agent

./: .dockerignore  .gitignore  APP_TESTING_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  README.md  README_NEW.md  TRACING_IMPLEMENTATION_SUMMARY.md  agent_adapters.py  agent_manager_config.yaml  app.py  deep_research_system_handoffs.py  demo_handoff_system.py  demo_tavily_handoff.py  deploy-digitalocean.sh  deploy.sh  docker-compose.yml  env.example  handoff_research_InnovateTech_Solutions_Sarah_Chen.md  lead_research_Morpho's_Christian_Marques_Rodello.md  lead_research_SerPromise_Yvette_Holmes.md  main.py  pyproject.toml  requirements.txt  research_agent_email.py  research_agent_linkedin.py  research_agent_website.py  run_research_system.py  setup-local-env.sh  setup.py  test_app.py  test_christian_lead.py  test_handoff_system.py  test_industry_problems_agent.py  test_sales_tracing.py  test_solutions_agent.py  test_system.py  test_tavily_agent.py
.chainlit/: config.toml
.github/workflows/: deploy.yml
config/: .env.example
deployment/: Dockerfile  deploy.sh  docker-compose.yml  docker-deploy.sh  setup-digitalocean.sh  setup-github-secrets.sh
docs/: PROJECT_STRUCTURE.md
examples/: __init__.py
examples/demos/: __init__.py  demo_agent_manager.py
examples/samples/: __init__.py
src/: __init__.py
src/deepsearch/: __init__.py  app.py
tests/: __init__.py
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_agent_manager.py  test_full_agent_system.py  test_handoff_structure.py  (+1 more)
(+15 files in other folders)
